fixed animation and wrapHeader css

--- a/src/styles/modules/button.module.scss
+++ b/src/styles/modules/button.module.scss
@@ -12,10 +12,12 @@
   display: inline-block;
   height: auto;
   padding: 0.7rem 2rem;
-  border-radius: 20px;
+  border-radius: 2000px;
   text-decoration: none;
   border: none;
-  font-weight: 600;
+  transition: all 0.2s;
+  color: var(--neutral-color);
+  font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
   overflow: hidden;
@@ -32,10 +34,13 @@
 .button--primary {
   background-color: var(--highlight-color-dark);
   color: var((--background-color));
+  &:hover {
+    filter: brightness(125%);
+  }
 }
 .button--secondary {
   background-color: var(--secondary-bg-color);
-  color: var(rgb(32, 29, 29));
+  color: var(--neutral-color);
 }
 
 /*
