--- a/src/styles/modules/title.module.scss
+++ b/src/styles/modules/title.module.scss
@@ -16,28 +16,30 @@
   margin-bottom: 1rem;
   color: var(--highlight-color);
 
-  &::first-letter {
+  .first {
     color: var(--highlight-color-dark);
     font-size: 5.5rem;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-out;
+    display: inline-block;
 
     &:hover {
-      animation: shake 0.5s ease-in-out infinite;
+      animation: shake 0.5s ease-out infinite;
     }
   }
-  @keyframes shake {
-    0% {
-      transform: translateX(0);
-    }
-    25% {
-      transform: translateX(25px);
-    }
+}
 
-    50% {
-      transform: translateX(-25px);
-    }
-    100% {
-      transform: translateX(0px);
-    }
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+  25% {
+    transform: translateY(-10px) rotate(3deg);
+  }
+  50% {
+    transform: translateY(-5px) rotate(-3deg);
+  }
+  75% {
+    transform: translateY(0) rotate(0);
   }
 }
